VKP-123-message-attachments: add unsent message attacments REST functionality
